Corrected username is config

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: zafarullahmahmood@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Deep Learning Tutorial
 baseurl: ""
-url: "https://zafmahmood.github.io"
+url: "https://zaffnet.github.io"
 twitter_username: zaffnet
 github_username:  zaffnet
 markdown: kramdown
