--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Deep Learning Blog
 email: zafarullahmahmood@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Deep Learning Tutorial
+  Deep Learning Blogs by Zafarullah Mahmood (zaffnet) zafarullahmahmood@gmail.com Covers Deep Convolutional Networks and other architectures for image recognition 
 baseurl: ""
 url: "https://zaffnet.github.io"
 twitter_username: zaffnet
