--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ baseurl: ""
 url: "https://zaffnet.github.io"
 twitter_username: zaffnet
 github_username:  zaffnet
+markdown: kramdown
 gems:
   - jekyll-feed
   - jekyll-gist
